--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "@mui/material": "^5.0.0",
+    "@mui/material": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
