--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
+    "@mui/icons-material": "^5.0.0",
     "@mui/material": "^5.0.0"
   },
   "scripts": {
