--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "@mui/icons-material": "^5.0.0",
+    "@emotion/react": "^11.0.0",
+    "@emotion/styled": "^11.0.0",
     "@mui/material": "^5.0.0"
   },
   "scripts": {
